# VECBEE

./: .gitignore  .gitmodules  Makefile  README.md  batch.sh  configure.sh  dataAnalyzer.py  measure_sis.rug  single-selection-result.xls  single-selection-result.xlsx  syn_sis.rug
ANS-VECBEE/: .gitignore  CMakeLists.txt  Makefile
ANS-VECBEE/approx/: MAC_0.0471.blif  SAD_0.0444.blif  SAD_0.0456.blif  SAD_0.0457.blif  SAD_0.0458.blif  SAD_0.0485.blif  adder_0.blif  adder_back.blif  adder_size_2021_K_6_Delay_121_Area_191_0.blif  alu4_0.0016.blif  alu4_0.0454.blif  alu4_0.0475.blif  alu4_0.0495.blif  alu4_0.0531.blif  arbiter_0.0005.blif  arbiter_0.0008.blif  arbiter_0.001.blif  arbiter_0.0011.blif  arbiter_0.00112.blif  arbiter_0.0013.blif  arbiter_0.0014.blif  arbiter_0.00185.blif  arbiter_0.00204.blif  arbiter_0.00218.blif  arbiter_0.0107.blif  arbiter_back.blif  bar_back.blif  c1908_0.0002.blif  c1908_0.0005.blif  c1908_0.00327.blif  c1908_0.0079.blif  c1908_0.0374.blif  c2670_0.0037.blif  c2670_0.04111.blif  c2670_0.blif  c3540_0.00019.blif  c3540_0.0005.blif  c3540_0.0021.blif  c3540_0.0081.blif  c3540_0.0314.blif  (+73 more)
ANS-VECBEE/mapped/: MAC_0.0471.blif  SAD_0.0444.blif  SAD_0.0456.blif  SAD_0.0457.blif  SAD_0.0458.blif  SAD_0.0485.blif  adder_back.blif  adder_size_2021_K_6_Delay_121_Area_191_0.blif  alu4_0.0016.blif  alu4_0.0093.blif  alu4_0.0454.blif  alu4_0.0495.blif  alu4_0.0531.blif  arbiter_back.blif  bar_back.blif  c2670_0.0226.blif  c2670_0.0485.blif  c5315_0.0026.blif  c880_0.0029.blif  c880_0.0053.blif  cavlc_back.blif  cla32_0.0005.blif  cla32_0.0069.blif  cla32_0.0092.blif  ctrl_back.blif  dec_0.blif  dec_back.blif  i2c_back.blif  int2float_back.blif  ksa32_0.0057.blif  max_0.0013.blif  max_back.blif  mem_ctrl_back.blif  mtp8_0.0065.blif  multiplier_back.blif  priority_back.blif  rca32_0.003.blif  rca32_0.0044.blif  rca32_0.blif  router_back.blif  (+10 more)
ANS-VECBEE/result/: epfl-er.xlsx  vecbee-ans.xlsx
ANS-VECBEE/script/: batch.py  script  temp.rug
ANS-VECBEE/src/: cktBit.h  cktBlif.cpp  cktBlif.h  cktCec.cpp  cktCec.h  cktGate.h  cktObj.h  cktSingSel.cpp  cktSingSel.h  cktSop.cpp  cktSop.h  cktSynthesis.cpp  cktSynthesis.h  cktTiming.h  cktVisual.cpp  cktVisual.h  header.h  main.cpp
SASIMI-VECBEE/: .gitignore  CMakeLists.txt  README.md
SASIMI-VECBEE/in/: c1908.in
SASIMI-VECBEE/inc/: cktUtil.h  headers.h  sasimi.h  simulator.h
SASIMI-VECBEE/script/: AERD.py  AreaVsErrorMapper.py  AreaVsErrorPainter.py  AreaVsErrorReducer.py  EERvsSER.py  (+23 more)
SASIMI-parallel/: .gitignore  CMakeLists.txt  tmp.csv
(+42768 files in other folders)
